add comentari_telefon_seu column to Entitat entity and update views for improved phone number handling